# routes/urls.js
@@ -1,14 +1,18 @@
 const { validateNewShortUrlInput } = require("../middlewares/Validations");
 const UrlsController = require("../controllers/Urls.Controller");
+const { validate } = require("../models/User");
+const validateUser = require("../middlewares/auth/validateUser");
 
 const router = require("express").Router();
 
-router.get("/userUrls", UrlsController.getUrls);
+router.get("/userUrls", validateUser, UrlsController.getUrls);
 
-router.post("/shorten", validateNewShortUrlInput, UrlsController.createShortUrl);
+router.post(
+  "/shorten",
+  validateNewShortUrlInput,
+  UrlsController.createShortUrl
+);
 
-router.get("/:code", UrlsController.getUserUrl);
-
-
+router.get("/:code",validateUser, UrlsController.getUserUrl);
 
 module.exports = router;
